--- a/BACKEND/loglistener/src/main/resources/application.properties
+++ b/BACKEND/loglistener/src/main/resources/application.properties
@@ -31,4 +31,5 @@ errorurl=http://localhost:8782/error
 warnurl=http://localhost:8784/warn
 debugurl=http://localhost:8781/debug
 
-log.collectorurl=http://13.201.68.212:8789/collector
+# Just replace the IP dynamically
+log.collectorurl=http://${LOG_COLLECTOR_IP}:8789/collector
