--- a/BACKEND/loglistener/src/main/resources/application.properties
+++ b/BACKEND/loglistener/src/main/resources/application.properties
@@ -32,4 +32,4 @@ warnurl=http://localhost:8784/warn
 debugurl=http://localhost:8781/debug
 
 # Just replace the IP dynamically
-log.collectorurl=http://${LOG_COLLECTOR_IP}:8789/collector
+log.collectorurl=http://${LOG_COLLECTOR_IP:127.0.0.1}:8789/collector
