--- a/Deployment-genlis/prometheus.yml
+++ b/Deployment-genlis/prometheus.yml
@@ -12,12 +12,19 @@ scrape_configs:
     static_configs:
       - targets: ["cadvisor:8080"]
 
+  # Node Exporter (host metrics)
+  - job_name: "node-exporter"
+    static_configs:
+      - targets: ["node-exporter:9100"]
+  
   # loggenerator
   - job_name: "loggenerator"
+    metrics_path: "/actuator/prometheus"
     static_configs:
       - targets: ["3.99.207.184:8780"]   # or <EC2-private-ip>:8780
 
   # loglistener
   - job_name: "loglistener"
+    metrics_path: "/actuator/prometheus"
     static_configs:
       - targets: ["3.99.207.184:8785"]   # or <EC2-private-ip>:8785
